fixed timer jumping 2s at a time

--- a/public/stylesheets/splash.css
+++ b/public/stylesheets/splash.css
@@ -25,6 +25,7 @@
 	border-radius: 100px;
 	color: black;
 	padding: 0px;
+	border: none;
 }
 
 #playbutton:hover{
